# Sikuwa

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE.CHINESE  README.md  README_GITEE.md  README_en.md  SECURITY.md  __init__.py  __main__.py  babel.cfg  builder.py  cli.py  compile_translations.py  compiler.py  config.py  feb.asm  fix.py  i18n.py  log.py  nuitka_loader.py  parser.py  sikuwa.a2.toml  sikuwa.toml  sikuwa_native_example.toml  使用说明.md
.gitee/pipelines/: ci.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-rust.yml  ci.yml  docs.yml
asm/x86_64/: README.md
asm/x86_64/linux/: hash.S  i64.S  tagged.S
asm/x86_64/win/: hash.asm  i64.asm  tagged.asm
asm/x86_64/win-gnu/: hash.S  i64.S  tagged.S
c/include/sikuwa/: abi.h  hotpath.h  module.h  py_shim.h  runtime.h
c/src/hotpath/: dispatch.c
c/src/py_shim/: box.c
c/src/runtime/: feb_main.c  stdlib_shim.c  value.c
cpp_cache/: CMakeLists.txt  __init__.py  pysmartcache.cp312-win_amd64.pyd  pysmartcache.cpp  pysmartcache_minimal.cpp  pysmartcache_simple.cpp  setup.py  smart_cache.cpp  smart_cache.h  smart_cache_minimal.cpp  smart_cache_minimal.h  smart_cache_simple.cpp  smart_cache_simple.h
crates/sikuwa-cli/: Cargo.toml
crates/sikuwa-cli/src/: config_util.rs  main.rs
crates/sikuwa-cli/src/commands/: build.rs  codegen.rs  doctor.rs  link.rs  mod.rs  pir.rs  pystat.rs  validate.rs  version.rs
crates/sikuwa-codegen-c/: Cargo.toml
crates/sikuwa-codegen-c/src/: abi_guard.rs  artifact_report.rs  build.rs  closure.rs  compile_log.rs  compile_report.rs  emit.rs  imports.rs  lib.rs  manifest.rs  pipeline.rs  preset.rs  py_shim.rs  slots.rs  structs.rs  verify.rs
crates/sikuwa-config/: Cargo.toml
crates/sikuwa-config/src/: lib.rs
crates/sikuwa-core/: Cargo.toml
crates/sikuwa-core/src/: error.rs  lib.rs  log.rs  version.rs
crates/sikuwa-link/: Cargo.toml
crates/sikuwa-link/src/: lib.rs
crates/sikuwa-pir/: Cargo.toml
crates/sikuwa-pir/src/: ids.rs  lib.rs  module.rs  opcode.rs  pirb.rs  span.rs  text.rs  verify.rs
crates/sikuwa-pir/src/lower/: c_extern.rs  class.rs  expr.rs  function.rs  import.rs  mod.rs  pep484.rs  type_directive.rs  type_evidence.rs
crates/sikuwa-pir/src/opt/: analysis.rs  inline.rs  keyword.rs  mod.rs  module_passes.rs  passes.rs
crates/sikuwa-pystat/: Cargo.toml
crates/sikuwa-pystat/src/: analyze.rs  config.rs  diagnostic.rs  evidence.rs  lib.rs  pass2.rs  pass3.rs  pass4.rs  pass5.rs  pstat.rs  types.rs
crates/sikuwa-pystat/src/infer/: cg.rs  layout.rs  logical.rs  mod.rs  scc.rs  sparse.rs
docs/: PLAN1.md  PLAN2.md  PLAN3.md  PLAN4.md  PLAN5.md  PLAN6.md  PLAN7.md  PLAN8.md  ROADMAP.md
docs/rfc/: a2-architecture.md  dtss-pystat.md  llvm-ir-backend.md  native-c-ffi.md  pir-opt-keywords.md  pythonir-v1.md
i18n/: __init__.py  sikuwa.pot
i18n/locales/en_US/LC_MESSAGES/: sikuwa.mo  sikuwa.po
incremental/: __init__.py  analyzer.py  compiler_integration.py  core.py  demo.py  smart_cache.py
incremental/cpp/: CMakeLists.txt  incremental_core.cpp  incremental_core.h  pybind_incremental.cpp
incremental/tests/: __init__.py  test_incremental.py
scripts/: asm-smoke.ps1  asm-smoke.sh  bench-sikuwa.ps1  bench-sikuwa.sh  closure-smoke.ps1  closure-smoke.sh  ffi-smoke.sh  multimodule-smoke.ps1  multimodule-smoke.sh  pystat-verify-ci.ps1  pystat-verify-ci.sh
tests/feb/: feb.py  feb_core.py
tests/ffi/: abi_version.c  asm_hotpath_test.c  bench_harness.c  closure_harness.c  harness.c  multimodule_harness.c  runtime_test.c
tests/fixtures/: attrs.py  fib_iter.py  fib_recursive.py  list_literal.py  narrow_if.py  opt_const.py  plan3.py  plan5_caller.py  plan5_extern.py  plan7_pep484.py  plan7_pep484.pyi  plan7_types.py  pystat_strict.py  pystat_union.py  sum_range.py  total.py  tuple_unpack.py
tests/golden/manifests/: plan7_pep484.skw.json  plan7_types.skw.json  preset.txt
