[package]
name = "sikuwa-codegen-c"
description = "Sikuwa-C codegen — PyStat-guided native C emission"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
sikuwa-core.workspace = true
sikuwa-pir.workspace = true
sikuwa-pystat.workspace = true
serde.workspace = true
serde_json.workspace = true
