[package]
name = "sikuwa-link"
description = "Link Sikuwa-C artifacts into shared libraries (.so / .dll)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
sikuwa-core.workspace = true
