[package]
name = "sikuwa-pir"
description = "Sikuwa PythonIR — self-developed SSA intermediate representation"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
sikuwa-core.workspace = true
serde.workspace = true
serde_json.workspace = true
blake3.workspace = true
thiserror.workspace = true
rustpython-parser = "0.4"
rustpython-ast = "0.4"
num-traits = "0.2"

[dev-dependencies]
serde_json.workspace = true
